@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/quest.c, quest step conditions, used to advance quests when another
+quest(s) are at the 'right' step(s)
+Brendan Lally 2010-05-30
+
 server/quest.c, #define the state numbers in the quest parsing code
 Brendan Lally 2010-05-30
 
